z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ a {
     padding: 0;
     list-style-type: none;
     list-style: none;
-    position: absolute;
+    z-index: 1000000;
 
     width: 140px;
     box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
